wayland: Fix restoring of initially maximized windows

Currently, if an initially maximized windows is restored, kwin won't
send a configure event asking the client to resize the window to its
preferred size.

This change addresses that by adding two new configure flags - reset
width and reset height. If a reset flag is set, the corresponding client
size will be set to 0 when the configure event is about to be sent.

BUG: 427124